# linux-common-library

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Contributors  Dockerfile  Doxyfile  Makefile  README.md  custom.mk  custom.mk_example  linux_common-tests.dockerfile  linux_common.dockerfile  release_notes.sh  sonar-project.properties  sonar-scan.sh
cmake/: CodeCoverage.cmake  softeq-commonConfig.cmake
components/logging/: CMakeLists.txt
components/logging/src/: console_logger.cc  console_logger.hh  log.cc  logger_interface.cc  system_logger.cc
components/logging/tests/: CMakeLists.txt  log.cc  logger_interface.cc
components/migration/: CMakeLists.txt
components/migration/src/: migration_manager.cc  migration_task.cc
components/migration/tests/: CMakeLists.txt  main.cc  manager.cc  settings_migration.cc
components/net/curl_helper/: CMakeLists.txt
components/net/curl_helper/src/: curl_helper.cc
components/net/curl_helper/tests/: CMakeLists.txt  curl_helper.cc
components/net/http/: CMakeLists.txt
components/net/http/src/: http_connection_impl.cc  http_connection_impl.hh  http_server.cc  http_server_impl.cc  http_server_impl.hh  http_session.cc  utils.hh
components/net/http/tests/: CMakeLists.txt  http_server.cc
components/net/rest/: CMakeLists.txt
components/net/rest/src/: resthandler.cc
components/net/rest/tests/: CMakeLists.txt  rest_server.cc
components/serialization/: CMakeLists.txt
components/serialization/extensions/json/: CMakeLists.txt
components/serialization/extensions/json/include/: json_array_deserializer.hh  json_array_serializer.hh  json_struct_deserializer.hh  json_struct_serializer.hh  json_utils.hh
components/serialization/extensions/json/src/: json.cc  json_array_deserializer.cc  json_array_serializer.cc  json_struct_deserializer.cc  json_struct_serializer.cc  json_utils.cc
components/serialization/extensions/xml/: CMakeLists.txt
components/serialization/extensions/xml/include/: xml_array_deserializer.hh  xml_array_serializer.hh  xml_struct_deserializer.hh  xml_struct_serializer.hh  xml_utils.hh
components/serialization/extensions/xml/src/: xml.cc  xml_array_deserializer.cc  xml_array_serializer.cc  xml_struct_deserializer.cc  xml_struct_serializer.cc  xml_utils.cc
components/serialization/tests/: CMakeLists.txt  object_assembler.cc  serialization_test_fixture.hh
components/serialization/tests/json/: basic.cc  data_structures.cc  deserialization_using_objects_creation.cc  helpers.cc  nested_levels_control.cc
components/serialization/tests/structures/: arrays_of_primitives.cc  arrays_of_primitives.hh  automatic_serialization.cc  automatic_serialization.hh  basic_structures.cc  basic_structures.hh  complex_object.cc  complex_object.hh  custom_type.cc  custom_type.hh  enum_object.cc  enum_object.hh  inheritance.cc  inheritance.hh  map_object.cc  map_object.hh  primitives_object.cc  primitives_object.hh  test_structure.cc  test_structure.hh  tuples.cc  tuples.hh  vector_of_maps.cc  vector_of_maps.hh
components/serialization/tests/xml/: basic.cc  data_structures.cc  helpers.cc  multithreading.cc
components/settings/: CMakeLists.txt
components/settings/src/: settings.cc
components/settings/tests/: CMakeLists.txt  basic.cc  serialization_json.cc  structs.cc  structs.hh
components/stdutils/: CMakeLists.txt
components/stdutils/src/: any.cc  packet_buffer.cc  stdutils.cc  timeutils.cc
components/stdutils/tests/: CMakeLists.txt  any.cc  optional.cc  packet_buffer.cc  scope_guard.cc  stdutils.cc  timeutils.cc
components/system/: CMakeLists.txt
components/system/include/system/: testtimeprovider.hh
components/system/src/: cron.cc  fsutils.cc  getopt_wrapper.cc  sd_bus.cc  service.cc  signal_manager.cc  time_provider.cc
components/system/tests/: CMakeLists.txt  cron.cc  fsutils.cc  getopt.cc  sd_bus.cc  service.cc  signal_manager.cc  svservice_test.cc  time_provider.cc
components/system/tests/env/: net.Sdbus.Moduletest.conf
data/: Config.cmake.in
examples/: CMakeLists.txt  cron.cc  curl_example.cc  getopt.cc  http_server.cc  index.html  logger.cc  rest_server.cc  service.cc  settings.cc  web_transform.xslt
include/common/: version.hh.in
include/common/logging/: log.hh  logger_interface.hh  system_logger.hh
include/common/migration/: migration_manager.hh  migration_settings.hh  migration_task.hh
include/common/net/curl_helper/: curl_helper.hh
include/common/net/http/: http_connection.hh  http_server.hh  http_session.hh
include/common/serialization/: base_member.hh  deserializers.hh  helpers.hh  object_assembler.hh  serializers.hh
include/common/settings/: settings.hh
include/common/stdutils/: any.hh  optional.hh  packet_buffer.hh  padded.hh  scope_guard.hh  stdutils.hh  timeutils.hh
include/common/system/: cron.hh  fsutils.hh  getopt_wrapper.hh  sd_bus.hh  service.hh  signal_manager.hh  time_provider.hh
include/softeq/common/: any.hh  cron.hh  exceptions.hh  fsutils.hh  getopt_wrapper.hh  log.hh  logger_interface.hh  optional.hh  packet_buffer.hh  padded.hh  scope_guard.hh  sd_bus.hh  service.hh  settings.hh  system_logger.hh  timeutils.hh
src/: any.cc  console_logger.cc  console_logger.hh  cron.cc  exceptions.cc  fsutils.cc  getopt_wrapper.cc  log.cc  logger_interface.cc  packet_buffer.cc  sd_bus.cc  service.cc  settings.cc  signal_manager.cc  signal_manager.hh  stdutils.cc  system_logger.cc  timeutils.cc  version.cc
src/net/: curl_helper.cc  http_connection_impl.cc  http_connection_impl.hh  http_server.cc  http_server_impl.cc  http_server_impl.hh  http_session.cc  resthandler.cc  utils.cc  utils.hh
src/serialization/: json_serializer.cc  xml_serializer.cc
tests/: CMakeLists.txt  any.cc  cron.cc  curl_helper.cc  exceptions.cc  fsutils.cc  getopt.cc  http_server.cc  http_session.cc  log.cc  logger_interface.cc  optional.cc  packet_buffer.cc  rest_server.cc  scope_guard.cc  sd_bus.cc  serialization.cc  service.cc  settings.cc  signal_manager.cc  stdutils.cc  svservice_test.cc  timeutils.cc
tools/cmake/: CodeCoverage.cmake  SofteqComponentsModel.cmake
(+25 files in other folders)
